--- a/TipListViewDemo/GMarketView.xib
+++ b/TipListViewDemo/GMarketView.xib
@@ -1,18 +1,80 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="GMarketView" customModule="TipListViewDemo" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="372" height="71"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BTC/USDT" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r79-aJ-YYd">
+                    <rect key="frame" x="6" y="12" width="84.5" height="22.5"/>
+                    <fontDescription key="fontDescription" name="PingFangSC-Semibold" family="PingFang SC" pointSize="16"/>
+                    <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="deviceRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="24H量 987883" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oDQ-6j-Uyo">
+                    <rect key="frame" x="6" y="43.5" width="75" height="15.5"/>
+                    <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="11"/>
+                    <color key="textColor" red="0.70196078431372544" green="0.76470588235294112" blue="0.8666666666666667" alpha="1" colorSpace="deviceRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="8119.55" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KZi-fH-dcs">
+                    <rect key="frame" x="141" y="12" width="56" height="22.5"/>
+                    <fontDescription key="fontDescription" name="PingFangSC-Semibold" family="PingFang SC" pointSize="16"/>
+                    <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="deviceRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$123223" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SFC-cK-H2i">
+                    <rect key="frame" x="141" y="43.5" width="44.5" height="15.5"/>
+                    <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="11"/>
+                    <color key="textColor" red="0.70196078429999997" green="0.76470588240000004" blue="0.86666666670000003" alpha="1" colorSpace="deviceRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+0.33%" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UCB-Gl-11V">
+                    <rect key="frame" x="261" y="17.5" width="100" height="36"/>
+                    <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="36" id="QeG-7V-YzM"/>
+                        <constraint firstAttribute="width" constant="100" id="fVE-y5-bwp"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" name="PingFangSC-Semibold" family="PingFang SC" pointSize="16"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BRW-Xp-PF3" userLabel="middle">
+                    <rect key="frame" x="185" y="0.0" width="2" height="71"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="2" id="An0-t5-iPj"/>
+                    </constraints>
+                </view>
+            </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <constraints>
+                <constraint firstAttribute="bottom" secondItem="BRW-Xp-PF3" secondAttribute="bottom" id="1fT-f1-lGe"/>
+                <constraint firstItem="BRW-Xp-PF3" firstAttribute="leading" secondItem="KZi-fH-dcs" secondAttribute="leading" constant="44" id="37Y-5y-Z4a"/>
+                <constraint firstItem="UCB-Gl-11V" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="41A-cu-kFf"/>
+                <constraint firstItem="r79-aJ-YYd" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="12" id="7Tt-Da-MfK"/>
+                <constraint firstItem="oDQ-6j-Uyo" firstAttribute="leading" secondItem="r79-aJ-YYd" secondAttribute="leading" id="I0x-Yi-t3X"/>
+                <constraint firstAttribute="bottom" secondItem="oDQ-6j-Uyo" secondAttribute="bottom" constant="12" id="R14-Fi-vqv"/>
+                <constraint firstItem="BRW-Xp-PF3" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="RjO-rG-sS8"/>
+                <constraint firstItem="r79-aJ-YYd" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="6" id="SIr-ym-MBE"/>
+                <constraint firstAttribute="trailing" secondItem="UCB-Gl-11V" secondAttribute="trailing" constant="11" id="U4N-9C-I24"/>
+                <constraint firstItem="KZi-fH-dcs" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="12" id="dLt-a0-Mat"/>
+                <constraint firstItem="SFC-cK-H2i" firstAttribute="leading" secondItem="KZi-fH-dcs" secondAttribute="leading" id="fzZ-zw-qxi"/>
+                <constraint firstItem="BRW-Xp-PF3" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="rLT-Yq-iFl"/>
+                <constraint firstAttribute="bottom" secondItem="SFC-cK-H2i" secondAttribute="bottom" constant="12" id="tzc-29-DzB"/>
+            </constraints>
+            <nil key="simulatedTopBarMetrics"/>
+            <nil key="simulatedBottomBarMetrics"/>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <point key="canvasLocation" x="153.62318840579712" y="181.13839285714286"/>
         </view>
     </objects>
 </document>
